--- a/news.html
+++ b/news.html
@@ -1,135 +1,95 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>أخبار كرة القدم | KoraLive</title>
-  <link rel="canonical" href="https://koralive.football/news.html" />
-  <link rel="stylesheet" href="assets/css/footer.css">
-  <link rel="stylesheet" href="assets/css/news.css">
-  <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;500;700;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="icon" href="assets/images/favicon.icon" type="image/x-icon">
-  <meta name="description" content="KoraLive - تغطية حصرية لأحدث أخبار ومباريات كرة القدم، الانتقالات، الدوريات الكبرى، وكل ما يتعلق بكرة القدم العالمية والعربية.">
-  <meta name="keywords" content="كرة قدم, مباريات, أخبار رياضية, الدوري الممتاز, كورة لايف, koralive, بث مباشر, انتقالات, إصابات, دوري أبطال أوروبا">
-  <meta name="author" content="KoraLive Team">
-  <meta name="robots" content="index, follow">
-  
-  <meta property="og:title" content="KoraLive - أخبار كرة القدم والمباريات">
-  <meta property="og:description" content="تغطية حصرية لأحدث مباريات كرة القدم">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://koralive.football/news.html">
-  <meta property="og:image" content="assets/images/logo.png">
-  
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="KoraLive - أخبار ومباريات كرة القدم">
-  <meta name="twitter:description" content="تغطية حصرية لأحدث مباريات كرة القدم">
-  <meta name="twitter:image" content="assets/images/logo.png">
-
-  <script type='text/javascript' src='//pl27749993.revenuecpmgate.com/cd/63/af/cd63afe2e01f3ca410d046a3e7e0b784.js'></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>أخبار كرة القدم | KoraLive</title>
+    <link rel="canonical" href="https://koralive.football/news.html" />
+    <link rel="stylesheet" href="assets/css/news.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
+    <!-- Meta Tags -->
+    <meta name="description" content="KoraLive - تابع آخر أخبار كرة القدم، الانتقالات، ونتائج المباريات من الدوريات العالمية والعربية.">
+    <meta name="author" content="KoraLive Team">
+    <meta name="robots" content="index, follow">
 </head>
 <body>
-  
-  <header class="header">
-    <div class="logo">
-      <img src="assets/images/logo.png" alt="شعار KoraLive">
-      <h1>KoraLive</h1> 
-    </div>
-    <nav class="nav">
-      <ul>
-        <li><a href="index.html">المباريات</a></li>
-        <li><a href="news.html">الأخبار</a></li>
-      </ul>
-    </nav>
-    <div class="menu-toggle">
-      <i class="fas fa-bars"></i>
-    </div>
-  </header>
-
-  <main class="news-main">
-    <div id="loading" class="loading-indicator" style="display: none;">
-      <div class="loader"></div>
-      <p>جاري تحميل الأخبار...</p>
-    </div>
-
-    <div id="error-container"></div>
-
-    <section class="breaking-news-section">
-      <div class="section-header">
-        <h2 class="section-title">
-          <i class="fas fa-bolt"></i> أخبار عاجلة
-        </h2>
-      </div>
-      <div id="breaking-news" class="breaking-news-grid">
+    <header class="header">
+        <div class="logo">
+            <img src="assets/images/logo.png" alt="شعار KoraLive">
+            <h1>KoraLive News</h1>
         </div>
-    </section>
+        <nav class="nav">
+            <ul>
+                <li><a href="index.html">المباريات</a></li>
+                <li><a href="news.html" class="active">الأخبار</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <section class="search-section">
-      <div class="search-container">
-        <input type="text" id="news-search" placeholder="ابحث في الأخبار...">
-        <button id="search-btn" aria-label="بحث">
-          <i class="fas fa-search"></i>
-        </button>
-      </div>
-      <div class="categories-tabs">
-        <button class="category-btn active" data-category="all">
-          <i class="fas fa-newspaper"></i> الكل
-        </button>
-        <button class="category-btn" data-category="latest-news">
-          <i class="fas fa-history"></i> آخر الأخبار
-        </button>
-        <button class="category-btn" data-category="barcelona">
-          <i class="fas fa-futbol"></i> برشلونة
-        </button>
-        <button class="category-btn" data-category="real-madrid">
-          <i class="fas fa-crown"></i> ريال مدريد
-        </button>
-        <button class="category-btn" data-category="epl">
-          <i class="fas fa-trophy"></i> الدوري الإنجليزي
-        </button>
-        <button class="category-btn" data-category="laliga">
-          <i class="fas fa-trophy"></i> الدوري الإسباني
-        </button>
-        <button class="category-btn" data-category="champions-league">
-          <i class="fas fa-star"></i> دوري الأبطال
-        </button>
-      </div>
-    </section>
-
-    <section class="sports-news-section">
-      <div class="section-header">
-        <h2 class="section-title">
-          <i class="fas fa-futbol"></i> أخبار الرياضة
-        </h2>
+    <main class="news-main">
+        <!-- مؤشر التحميل -->
+        <div id="loading" class="loading-indicator" style="display: none;">
+            <div class="loader"></div>
         </div>
-      <div id="sports-news" class="sports-news-grid">
+
+        <!-- حاوية الأخطاء -->
+        <div id="error-container"></div>
+
+        <!-- قسم الأخبار العاجلة -->
+        <section class="breaking-news-section">
+            <h2 class="section-title"><i class="fas fa-bolt"></i> أخبار عاجلة</h2>
+            <div id="breaking-news" class="breaking-news-grid">
+                <!-- سيتم تعبئة المحتوى هنا بواسطة JavaScript -->
+            </div>
+        </section>
+
+        <!-- شريط البحث والتصنيفات -->
+        <section class="search-section">
+            <div class="search-container">
+                <input type="text" id="news-search" placeholder="ابحث في الأخبار...">
+                <button id="search-btn" aria-label="بحث"><i class="fas fa-search"></i></button>
+            </div>
+            <div class="categories-tabs">
+                <button class="category-btn active" data-category="football">الكل</button>
+                <button class="category-btn" data-category="كرة-القدم-الإسبانية">الدوري الإسباني</button>
+                <button class="category-btn" data-category="كرة-القدم-الانجليزية">الدوري الإنجليزي</button>
+                <button class="category-btn" data-category="دوري-ابطال-اوروبا">دوري الأبطال</button>
+                <button class="category-btn" data-category="كرة-القدم-السعودية">الدوري السعودي</button>
+            </div>
+        </section>
+
+        <!-- قسم الأخبار الرياضية -->
+        <section class="sports-news-section">
+            <h2 class="section-title"><i class="fas fa-futbol"></i> آخر الأخبار</h2>
+            <div id="sports-news" class="sports-news-grid">
+                <!-- سيتم تعبئة المحتوى هنا بواسطة JavaScript -->
+            </div>
+            <button id="load-more" class="load-more-btn">
+                <i class="fas fa-plus"></i> تحميل المزيد
+            </button>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <div class="footer-content">
+            <a href="index.html" class="logo-text">KoraLive</a>
+            <div class="footer-links">
+                <a href="index.html"><i class="fas fa-home"></i> المباريات</a>
+                <a href="news.html"><i class="fas fa-newspaper"></i> الأخبار</a>
+            </div>
         </div>
-      <button id="load-more" class="load-more-btn">
-        <i class="fas fa-plus"></i> تحميل المزيد
-      </button>
-    </section>
-  </main>
+        <div class="copyright">
+            <p>حقوق النشر © <span id="current-year"></span> KoraLive - جميع الحقوق محفوظة</p>
+        </div>
+    </footer>
 
-  <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-logo">
-        <a href="index.html" class="logo-text">KoraLive</a>
-      </div>
-      <div class="footer-links">
-        <a href="index.html"><i class="fas fa-home"></i>المباريات</a>
-        <a href="news.html"><i class="fas fa-newspaper"></i>أخبار كرة القدم</a>
-      </div>
-    </div>
-    <div class="copyright">
-      <p>حقوق النشر © <span id="current-year"></span> Kora Live - جميع الحقوق محفوظة</p>
-    </div>
-  </footer>
-
-  <script src="assets/js/news.js"></script>
-  <script>
-    // تحديث السنة في الفوتر تلقائيًا
-    document.getElementById('current-year').textContent = new Date().getFullYear();
-  </script>
-  <script type='text/javascript' src='//pl27749999.revenuecpmgate.com/52/78/3c/52783c8a8062307c66371da73d0bae78.js'></script>
+    <script>
+        document.getElementById('current-year').textContent = new Date().getFullYear();
+    </script>
+    <script type="module" src="assets/js/news.js"></script>
 </body>
 </html>
+
