--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap">
+    <!-- ads -->
+    <script src="https://fpyf8.com/88/tag.min.js" data-zone="176035" async data-cfasync="false"></script>
     <script type='text/javascript' src='//pl27749993.revenuecpmgate.com/cd/63/af/cd63afe2e01f3ca410d046a3e7e0b784.js'></script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-LVZ7KRDPEW"></script>
