--- a/index.html
+++ b/index.html
@@ -49,12 +49,11 @@
     <meta name="robots" content="index, follow">
 
     <!-- هنا تضع روابط ملفات CSS و JavaScript كالمعتاد -->
-    <link rel="stylesheet" href="assets/css/matches.css">
+    <link rel="stylesheet" href="assets/css/matches.css" media="print" onload="this.media='all'">
     
     <link rel="preload" href="assets/css/matches.css" as="style">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <link rel="stylesheet" href="assets/css/matches.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/footer.css" media="print" onload="this.media='all'">
     <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></noscript>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap">
     <!-- ads -->
