--- a/news.html
+++ b/news.html
@@ -52,8 +52,8 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
     <!-- روابط CSS والخطوط -->
-    <link rel="stylesheet" href="assets/css/news.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/news.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="assets/css/footer.css" media="print" onload="this.media='all'">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
