--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
     <header class="header">
         <div class="logo">
             <img src="assets/images/logo.png" alt="FootTV Logo" loading="lazy" width="60" height="60">
-            <h1>Football Matches</h1>
-            <h1>كورة لايف</h1>
+            <h1><a href="index.html" class="active"Football Matches</h1>
             <h1>-</h1>
-            <h1>Kora Live</h1>
+            <h1><a href="index.html" class="active"Kora Live</h1>
+            <h1><a href="index.html" class="active"كورة لايف</h1>
 
         </div>
         <nav class="nav">
