--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
     
     <header class="header">
         <div class="logo">
-            <img src="assets/images/logo.png" alt="FootTV Logo" loading="lazy" width="60" height="60">
-            <h1><a href="index.html" class="active"Football Matches</h1>
+            <img src="assets/images/logo.png" alt="koralive Logo" loading="lazy" width="60" height="60">
+            <h1><a href="index.html" class="active">Football Matches</h1>
             <h1>-</h1>
-            <h1><a href="index.html" class="active"Kora Live</h1>
-            <h1><a href="index.html" class="active"كورة لايف</h1>
+            <h1><a href="index.html" class="active">Kora Live</h1>
+            <h1><a href="index.html" class="active">كورة لايف</h1>
 
         </div>
         <nav class="nav">
