--- a/index.html
+++ b/index.html
@@ -75,8 +75,13 @@
             <h1>Football Matches</h1>
             <h1>-</h1>
            <a href="https://koralive.football/" class="logo" style="text-decoration: none; color: inherit;">
-    <!-- تم دمج النصوص في عنوان واحد لتحسين SEO -->
+   <a href="https://koralive.football/" class="logo" style="text-decoration: none; color: inherit;">
+    <h1>KooraLive</h1>
+</a>
+
     <h1>KoraLive</h1>
+</a>
+
 </a>
 
             <h1>كورة لايف</h1>
